force-app/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <description>国内・海外の請求情報（唄）</description>
    <label>口座情報</label>
    <nameField>
        <label>口座情報No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>