force-app/main/default/objects/Transfer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>口座情報</relationshipLabel>
    <relationshipName>Payment_Account</relationshipName>
    <type>Lookup</type>
</CustomField>