force-app/main/default/objects/Transfer__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <description>山本</description>
    <formula>Account__r.SummaryAccountCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払先コード(OBIC)</label>
    <type>Text</type>
</CustomField>