force-app/main/default/objects/Transfer__c/fields/bank_account_kb__c.field-meta.xml
<CustomField>
    <fullName>bank_account_kb__c</fullName>
    <label>口座区分（日本）</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>普通</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>当座</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>