force-app/main/default/objects/Transfer__c/fields/bank_account_no__c.field-meta.xml
<CustomField>
    <fullName>bank_account_no__c</fullName>
    <label>口座番号（日本）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>