force-app/main/default/objects/Transfer__c/fields/bank_cd__c.field-meta.xml
<CustomField>
    <fullName>bank_cd__c</fullName>
    <description>山本</description>
    <label>銀行コード</label>
    <length>4</length>
    <type>Text</type>
</CustomField>