force-app/main/default/objects/Transfer__c/fields/bank_nm__c.field-meta.xml
<CustomField>
    <fullName>bank_nm__c</fullName>
    <label>銀行名（日本）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>