force-app/main/default/objects/Transfer__c/fields/bank_registration_nm__c.field-meta.xml
<CustomField>
    <fullName>bank_registration_nm__c</fullName>
    <description>山本</description>
    <label>口座登録番号</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>第1口座</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>第2口座</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>第3口座</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>第4口座</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>第5口座</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>