force-app/main/default/objects/Transfer__c/fields/Bizcard_check_memo__c.field-meta.xml
<CustomField>
    <fullName>Bizcard_check_memo__c</fullName>
    <description>山本</description>
    <formula>Contact__r.Bizcard_check_memo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名刺確認時メモ</label>
    <type>Text</type>
</CustomField>