force-app/main/default/objects/Transfer__c/fields/Bizcard_checked__c.field-meta.xml
<CustomField>
    <fullName>Bizcard_checked__c</fullName>
    <description>山本</description>
    <formula>Contact__r.Bizcard_checked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名刺確認済み</label>
    <type>Checkbox</type>
</CustomField>