force-app/main/default/objects/Transfer__c/fields/branch_cd__c.field-meta.xml
<CustomField>
    <fullName>branch_cd__c</fullName>
    <description>山本</description>
    <label>支店コード</label>
    <length>3</length>
    <type>Text</type>
</CustomField>