force-app/main/default/objects/Transfer__c/fields/branch_nm__c.field-meta.xml
<CustomField>
    <fullName>branch_nm__c</fullName>
    <label>支店名（日本）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>