force-app/main/default/objects/Transfer__c/fields/client_kgai_bank_account_id__c.field-meta.xml
<CustomField>
    <fullName>client_kgai_bank_account_id__c</fullName>
    <label>会員銀行口座ID（海外）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>