force-app/main/default/objects/Transfer__c/fields/FinalPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>FinalPaymentDate__c</fullName>
    <description>山本</description>
    <label>最終支払日</label>
    <type>Date</type>
</CustomField>