force-app/main/default/objects/Transfer__c/fields/is_registered__c.field-meta.xml
<CustomField>
    <fullName>is_registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>仕入営業で取引先から登録口座を回収できたらチェックがつけられる
振込申請依頼時に登録口座と同じを選ばれた場合、本項目にチェックがついているレコードがセットされるようになる
項目レベルセキュリティでチェックつけられるプロファイルを限定しているので注意。山本</description>
    <label>登録口座</label>
    <type>Checkbox</type>
</CustomField>