force-app/main/default/objects/Transfer__c/fields/kgai_bank_account_no__c.field-meta.xml
<CustomField>
    <fullName>kgai_bank_account_no__c</fullName>
    <label>口座番号（海外）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>