force-app/main/default/objects/Transfer__c/fields/kgai_bank_nm__c.field-meta.xml
<CustomField>
    <fullName>kgai_bank_nm__c</fullName>
    <label>銀行名（海外）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>