force-app/main/default/objects/Transfer__c/fields/KN_PAYMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>KN_PAYMENT_TYPE__c</fullName>
    <label>支払いパターン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>対象外</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>書類到着後</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>売却後</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>