force-app/main/default/objects/Transfer__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>member_auction_Overseas_transfer</relationshipName>
    <type>Lookup</type>
</CustomField>