force-app/main/default/objects/Transfer__c/fields/Memo_Transfer_Japan__c.field-meta.xml
<CustomField>
    <fullName>Memo_Transfer_Japan__c</fullName>
    <label>メモ（国内口座関連）</label>
    <type>TextArea</type>
</CustomField>