force-app/main/default/objects/Transfer__c/fields/Memo_Transfer_Overseas__c.field-meta.xml
<CustomField>
    <fullName>Memo_Transfer_Overseas__c</fullName>
    <label>メモ（海外口座関連）</label>
    <type>TextArea</type>
</CustomField>