force-app/main/default/objects/Transfer__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>銀行口座備考（海外）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>