force-app/main/default/objects/Transfer__c/fields/note_japan_transfer__c.field-meta.xml
<CustomField>
    <fullName>note_japan_transfer__c</fullName>
    <label>銀行口座備考（日本）</label>
    <type>TextArea</type>
</CustomField>