force-app/main/default/objects/Transfer__c/fields/Payment_account_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Payment_account_phone_number__c</fullName>
    <label>国内送金代行業者　電話番号</label>
    <type>Phone</type>
</CustomField>