force-app/main/default/objects/Transfer__c/fields/Payment_account_sender__c.field-meta.xml
<CustomField>
    <fullName>Payment_account_sender__c</fullName>
    <label>送金名義人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>