force-app/main/default/objects/Transfer__c/fields/Payment_agent_address__c.field-meta.xml
<CustomField>
    <fullName>Payment_agent_address__c</fullName>
    <label>国内送金代行業者　住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>