force-app/main/default/objects/Transfer__c/fields/payment_agent_PIC__c.field-meta.xml
<CustomField>
    <fullName>payment_agent_PIC__c</fullName>
    <label>国内送金代行業者　担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>