force-app/main/default/objects/Transfer__c/fields/payment_due_date_kbn__c.field-meta.xml
<CustomField>
    <fullName>payment_due_date_kbn__c</fullName>
    <label>支払予定日</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>都度</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>週締め</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>月締め</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>