force-app/main/default/objects/Transfer__c/recordTypes/Buyer.recordType-meta.xml
<RecordType>
    <fullName>Buyer</fullName>
    <active>true</active>
    <label>仕入営業</label>
</RecordType>