force-app/main/default/objects/Transfer__c/recordTypes/Japan.recordType-meta.xml
<RecordType>
    <fullName>Japan</fullName>
    <active>true</active>
    <label>国内</label>
</RecordType>