force-app/main/default/objects/Transfer__c/recordTypes/Overseas.recordType-meta.xml
<RecordType>
    <fullName>Overseas</fullName>
    <active>true</active>
    <label>海外</label>
</RecordType>