force-app/main/default/objects/Transfer__c/validationRules/NotContains_bank_nm.validationRule-meta.xml
<ValidationRule>
    <fullName>NotContains_bank_nm</fullName>
    <active>true</active>
    <description>山本</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Buyer&quot; &amp;&amp;CONTAINS( bank_nm__c ,&quot;銀行&quot;)</errorConditionFormula>
    <errorMessage>銀行名は「銀行」までの名称のみ入力してください</errorMessage>
</ValidationRule>